--- a/frontend/src/assets/styles/NavBar.css
+++ b/frontend/src/assets/styles/NavBar.css
@@ -6,7 +6,6 @@ header {
     z-index: 1000;
     background-color: white;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    z-index: 999999;
 }
 
 .navbar-container {
